--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.red-orange.min.css" />
   <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+  <script src="https://use.fontawesome.com/f92e55701a.js"></script>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -25,5 +26,5 @@
       </div>
     </section>
   </app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.18052146ac357f070008.bundle.js"></script><script type="text/javascript" src="main.257dd6118991bf690564.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.d81a5a4442a9c6efe03a.bundle.js"></script><script type="text/javascript" src="main.ff3759bea54fceb23d3d.bundle.js"></script></body>
 </html>
