new gh-pages version

--- a/404.html
+++ b/404.html
@@ -12,8 +12,9 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.red-orange.min.css" />
   <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
   <script src="https://use.fontawesome.com/f92e55701a.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
 
 
 </head>
@@ -26,5 +27,5 @@
       </div>
     </section>
   </app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.ac978f2918e6428436b9.bundle.js"></script><script type="text/javascript" src="main.28d4cf2c43d3a0f05460.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.ac978f2918e6428436b9.bundle.js"></script><script type="text/javascript" src="main.f545f4821c5b3462e13b.bundle.js"></script></body>
 </html>
